@@ -49,8 +49,9 @@ extern intptr_t (*grub_ieee1275_entry_fn) (void *);
 uint32_t EXPORT_FUNC(grub_ieee1275_decode_int_4) (unsigned char *p);
 int EXPORT_FUNC(grub_ieee1275_finddevice) (char *name,
 					   grub_ieee1275_phandle_t *phandlep);
-int EXPORT_FUNC(grub_ieee1275_get_property) (int handle, const char *property,
-					     void *buf, grub_size_t size,
+int EXPORT_FUNC(grub_ieee1275_get_property) (grub_ieee1275_phandle_t handle,
+					     const char *property, void *buf,
+					     grub_size_t size,
 					     grub_size_t *actual);
 int EXPORT_FUNC(grub_ieee1275_next_property) (int handle, char *prev_prop,
 					      char *prop, int *flags);
